--- a/src/styles/empleados.css
+++ b/src/styles/empleados.css
@@ -1,58 +1,3 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400..700&display=swap");
-
-:root {
-  --color-black: #41423d;
-  --color-neutral-100: #f5f4f0;
-  --color-neutral: #dfddd0;
-  --color-primary-100: #f0f7f5;
-  --color-primary-200: #e0eeeb;
-  --color-primary-300: #cfe5e0;
-  --color-primary: #3f9783;
-  --color-primary-500: #327969;
-  --color-white: #fbfcfa;
-  --text-font-family: "Inter", sans-serif;
-  --title-font-family: "Lora", serif;
-  --title-font-weight: 500;
-}
-
-/*
-  table
-*/
-
-table {
-  border-collapse: collapse;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 100%;
-}
-td,
-th {
-  border-bottom: 1px solid var(--color-primary-300);
-  font-size: 1rem;
-  text-align: left;
-  white-space: nowrap;
-}
-th {
-  padding: 1rem 1.5rem;
-  width: 10rem;
-}
-td {
-  padding: 1rem;
-}
-
-thead {
-  background-color: #202020 !important;
-  color: white;
-}
-
-tbody tr {
-  cursor: pointer;
-}
-tbody tr.selected td {
-}
-tbody tr:hover:not(.selected) td,
-tbody tr.hover:not(.selected) td {
-  background-color: grey;
+thead tr {
+  background-color: black !important;
 }
