--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,6 +9,19 @@ header {
 .navbar-brand {
   color: white;
   font-weight: 600;
+  display: flex;
+}
+
+.navbar-brand img {
+  width: 4rem;
+  height: 4rem;
+  cursor: pointer;
+  border-radius: 100%;
+  transition: 0.5s all ease-in-out;
+}
+
+.navbar-brand > img:hover {
+  filter: invert(0.2);
 }
 
 .navbar-collapse > a {
