--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,6 @@
 footer {
-  background-color: #93b1a6;
+  /* background-color: #93b1a6; */
+  background-color: #164863;
   height: 3rem;
   display: flex;
   justify-content: center;
