--- a/src/styles/empleados.css
+++ b/src/styles/empleados.css
@@ -1,3 +1,5 @@
+/* empleados */
+
 .container-datatable {
   margin: 2rem 0;
   background-color: white;
@@ -103,5 +105,26 @@
 .estado-item > p {
   color: #495057;
   font-weight: 600;
+  margin: 0;
+}
+
+/* usuarios */
+
+.name-img-user {
+  display: flex;
+  align-items: center;
+}
+
+.name-img-user img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
+.name-img-user p {
+  color: #495057;
+  font-weight: 500;
   margin: 0;
 }
