--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,6 @@
 header {
-  background-color: rgb(0, 40, 65);
+  background-color: #164863;
+  /* background-color: rgb(0, 40, 65); */
 }
 
 .container > button {
