--- a/src/styles/empleados.css
+++ b/src/styles/empleados.css
@@ -18,12 +18,11 @@
 .container-datatable > div > div {
   width: 100%;
 }
-.container-datatable table {
-}
 
 .contain-input-search {
   background-color: #39a7ff;
 }
+
 .contain-input-search input {
   border: 0;
   font-size: 1.2rem;
@@ -55,6 +54,7 @@
   font-weight: 700;
   font-size: 0.8rem;
   text-transform: uppercase;
+  text-decoration: none;
   transition: 0.7s all ease-in-out;
 }
 
@@ -62,7 +62,8 @@
   display: flex;
 }
 
-.btn-acciones > a {
+.btn-acciones > a,
+.btn-acciones > button {
   margin: 0.3rem;
   border: 0;
   padding: 1rem;
@@ -76,10 +77,10 @@
   text-decoration: none;
 }
 
-.btn-acciones > a:first-child {
+.btn-acciones > a {
   background-color: #d2de32;
 }
-.btn-acciones > a:last-child {
+.btn-acciones > button {
   background-color: #ff6c22;
 }
 
@@ -104,7 +105,6 @@
 
 .estado-item > p {
   color: #495057;
-  font-weight: 600;
   margin: 0;
 }
 
@@ -127,4 +127,38 @@
   color: #495057;
   font-weight: 500;
   margin: 0;
+}
+
+.item-asociado a {
+  text-decoration: none;
+  color: #495057;
+  transition: 0.5s all ease-in-out;
+}
+
+.item-asociado a:hover {
+  color: #362fd9;
+}
+
+.modal-custom-accion .modal-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-custom-accion .modal-footer > button {
+  color: white;
+  border: 0;
+  padding: 0.5rem 1.9rem;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  transition: 0.7s all ease-in-out;
+}
+
+.modal-custom-accion .modal-footer > button:first-child {
+  background-color: #d2de32;
+}
+
+.modal-custom-accion .modal-footer > button:last-child {
+  background-color: #ff6c22;
 }
