--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -42,7 +42,7 @@
   transition: 0.7s all ease-in-out;
 }
 
-.btn-card-home > button {
+.btn-card-home > a {
   background-color: #362fd9;
   color: #eeeeee;
   border: 0;
@@ -53,9 +53,10 @@
   text-transform: uppercase;
   transition: 0.7s all ease-in-out;
   border: 4px solid transparent;
+  text-decoration: none;
 }
 
-.btn-card-home > button:hover {
+.btn-card-home > a:hover {
   color: #362fd9;
   border: 4px solid #362fd9;
   background-color: #eeeeee;
