--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -25,11 +25,30 @@ header {
   filter: invert(0.2);
 }
 
-.navbar-collapse > a {
+.navbar-collapse > a, .dropdown>a {
   color: white;
   text-decoration: none;
   font-weight: 600;
   margin: 0 1rem;
+}
+
+.login-brand {
+  background-color: white;
+  border-radius: 100%;
+  width: 4rem;
+  height: 4rem;
+  transition: 0.6s all ease-in-out;
+}
+
+.login-brand:hover {
+  background-color: rgb(233, 228, 228);
+
+}
+
+.login-brand img {
+  padding: 0.7rem;
+  border-radius: 0px;
+  object-fit: cover;
 }
 
 @media (max-width: 991px) {
