--- a/src/styles/empListado.css
+++ b/src/styles/empListado.css
@@ -1,12 +1,110 @@
 .col-card-emp {
-    background-color: white;
-    padding: 0.5rem;
+  background-color: white;
+  border: 13px solid rgb(221, 222, 220);
+  height: 35rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 0.7rem;
+  transition: 0.7s all ease-in-out;
 }
 
+.col-card-emp:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
 
-.card-emp-img>img {
-    width: 10rem;
-    height: 10rem;
-    object-fit: cover;
-    border-radius: 100%;
+.card-emp-img > img {
+  width: 11rem;
+  height: 11rem;
+  object-fit: cover;
+  border-radius: 100%;
+  position: absolute;
+  top: 75px;
+  border: 6px solid white;
+}
+
+.card-emp-img {
+  position: relative;
+}
+
+.card-emp-img > div {
+  background: linear-gradient(to bottom, rgb(165, 154, 254), rgb(48, 107, 253));
+  position: absolute;
+  height: 10rem;
+  width: 100%;
+}
+
+.col-info-emp-card {
+  position: relative;
+}
+
+.col-info-emp-card > div {
+  position: absolute;
+}
+
+.col-info-emp-card > div {
+  width: 100%;
+}
+
+.col-info-emp-card > div:first-child > p {
+  position: relative;
+  top: 17rem;
+}
+
+.col-info-emp-card > div:first-child > p {
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.col-info-emp-card > div:last-child {
+  top: 21rem;
+}
+
+.col-info-emp-card > div:last-child > p {
+  margin: 0 3rem;
+  color: grey;
+}
+
+.col-detalle-emp-card {
+  position: relative;
+  height: 95%;
+}
+
+.col-detalle-emp-card > a {
+  position: absolute;
+  bottom: 0;
+  background-color: #362fd9;
+  color: #eeeeee;
+  border: 0;
+  padding: 0.5rem 1.9rem;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  transition: 0.7s all ease-in-out;
+  border: 4px solid transparent;
+  text-decoration: none;
+}
+
+.col-detalle-emp-card > a:hover {
+  color: #362fd9;
+  border: 4px solid #362fd9;
+  background-color: #eeeeee;
+}
+
+.contain-list-emp > div {
+  background-color: #39a7ff;
+}
+.contain-list-emp > div:first-child > p {
+  color: white;
+  font-size: 1.7rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 1rem;
+}
+
+.contain-list-emp {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 2rem 0;
 }
