--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
   /* background-color: rgb(194, 105, 105) !important; */
   background-color: rgb(239, 239, 239) !important;
+}
+
+p, h1 {
+  font-family: 'Roboto', sans-serif;
 }
