--- a/src/styles/empListado.css
+++ b/src/styles/empListado.css
@@ -108,3 +108,14 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin: 2rem 0;
 }
+
+.contain-header-listado input {
+  border: 0;
+  font-size: 1.2rem;
+  width: 100%;
+  color: black;
+  font-weight: 600;
+  margin-top: 1rem;
+  background-color: rgb(236, 236, 236);
+  border-radius: 5px;
+}
