--- a/src/styles/loginRegister.css
+++ b/src/styles/loginRegister.css
@@ -1,13 +1,11 @@
 .form-login-custom {
   background-color: white;
   padding: 0.7rem;
-  margin: 0.4rem;
+  margin: 3rem auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   height: 18rem;
-  width: 25rem;
+  max-width: 25rem;
   transition: 0.7s all ease-in-out;
-  margin-bottom: 3rem;
-  margin-top: 3rem;
 }
 
 .form-group-custom,
