--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -1,84 +1,89 @@
-.contain-row-usuario{
-    background-color: white;
-    margin: 0;
-    margin: 3rem 0;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    /* position: absolute; */
-    top: 20rem;
+.contain-row-usuario {
+  background-color: white;
+  margin: 0;
+  margin: 3rem 0;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  /* position: absolute; */
+  top: 20rem;
 
-    width: 70%;
+  width: 70%;
 }
 
-.contain-row-usuario>div {
-    /* margin-top: 3rem; */
+.contain-row-usuario > div {
+  /* margin-top: 3rem; */
 }
 
 .contain-usuario {
-    margin-top: 10rem;
+  margin-top: 10rem;
 }
 
 .contain-usuario-img {
-    width: 100%;
-    position: relative;
-    height: 10rem;
+  width: 100%;
+  position: relative;
+  height: 10rem;
 }
 
-.contain-usuario-img>img {
-    position: absolute;
-    width: 20rem;
-    height: 20rem;
-    object-fit: cover;
-    border-radius: 100%;
-    bottom: -30px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+.contain-usuario-img > img {
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: 100%;
+  bottom: -30px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-.contain-usuario-info>div>p {
-    text-align: center;
-    margin: 0;
+.contain-usuario-info > div > p {
+  text-align: center;
+  margin: 0;
 }
 
-.contain-usuario-info>div:first-child>p {
-    font-size: 2.4rem;
-    font-weight: 600;
-    text-align: center;
-    color: rgb(107, 107, 107);
+.contain-usuario-info > div:first-child > p {
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: center;
+  color: rgb(107, 107, 107);
 }
 
-.contain-usuario-info>div:last-child>p{
-    font-weight: 700;
-    text-transform: uppercase;
+.contain-usuario-info > div:last-child > p {
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.rol-usuario-admin, .rol-usuario-user {
-    margin-top:3rem;
+.rol-usuario-admin,
+.rol-usuario-user {
+  margin-top: 3rem;
 }
 
-.rol-usuario-user>p,.rol-usuario-admin>p {
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 0.2rem 0.8rem;
-    border-radius: 20px;
-    width: 10rem;
-    text-align: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+.rol-usuario-user > p,
+.rol-usuario-admin > p {
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 0.2rem 0.8rem;
+  border-radius: 20px;
+  width: 10rem;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-.rol-usuario-admin>p {
-    color:white;
-    background-color: red;
+.rol-usuario-admin > p {
+  color: white;
+  background-color: red;
 }
 
-.rol-usuario-user>p {
-    background-color: greenyellow;
+.rol-usuario-user > p {
+  background-color: greenyellow;
 }
 
 .contain-usuario-btn {
-    margin: 2rem 0;
+  margin: 2rem 0;
 }
 
-.contain-usuario-btn >button {
-    background-color: #362fd9;
+.contain-usuario-btn > button {
+  background-color: #362fd9;
   color: #eeeeee;
   border: 0;
   padding: 0.8rem 1.9rem;
@@ -90,9 +95,8 @@
   border: 4px solid transparent;
 }
 
-.contain-usuario-btn >button:hover {
-    color: #362fd9;
-    border: 4px solid #362fd9;
-    background-color: #eeeeee;
-  }
-  
+.contain-usuario-btn > button:hover {
+  color: #362fd9;
+  border: 4px solid #362fd9;
+  background-color: #eeeeee;
+}
