--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -9,3 +9,16 @@ p,
 h1 {
   font-family: 'Roboto', sans-serif;
 }
+
+.form-multiple-select-custom {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-multiple-select-custom > div:hover {
+  border: 1px solid #ced4da !important;
+}
+
+.form-multiple-select-custom .p-multiselect-label {
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem !important;
+}
