--- a/src/styles/loginRegister.css
+++ b/src/styles/loginRegister.css
@@ -59,6 +59,7 @@
   text-transform: uppercase;
   transition: 0.7s all ease-in-out;
   border: 4px solid transparent;
+  width: 14rem;
 }
 
 .btn-login-custom:hover {
