cambios de estilos

--- a/src/styles/formAM.css
+++ b/src/styles/formAM.css
@@ -72,3 +72,16 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+
+.alert-empleado > p {
+  background-color: red;
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+  width: 60%;
+  margin: 0 auto;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
