--- a/src/styles/empleados.css
+++ b/src/styles/empleados.css
@@ -167,3 +167,38 @@
   display: flex;
   flex-direction: column;
 }
+
+.detalle-borrado {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detalle-borrado p {
+  margin: 0;
+}
+
+.detalle-borrado ul {
+  width: 100%;
+}
+
+.detalle-borrado i {
+  text-decoration: underline;
+}
+
+.detalle-borrado a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #000;
+}
+
+.detalle-borrado a:hover {
+  color: #362fd9;
+  text-decoration: underline;
+}
+
+.detalle-borrado strong {
+  text-transform: uppercase;
+  color: red;
+  margin: 0 auto;
+}
